@@ -13,7 +13,6 @@ if (!function_exists('__')) {
 }
 
 
-$strSetupAllowAnywhereRecoding_name = __('Allow character set conversion');
 $strSetupAllowArbitraryServer_desc = __('If enabled user can enter any MySQL server in login form for cookie auth');
 $strSetupAllowArbitraryServerMsg = __('This [a@?page=form&amp;formset=features#tab_Security]option[/a] should be disabled as it allows attackers to bruteforce login to any MySQL server. If you feel this is necessary, use [a@?page=form&amp;formset=features#tab_Security]trusted proxies list[/a]. However, IP-based protection may not be reliable if your IP belongs to an ISP where thousands of users, including you, are connected to.');
 $strSetupAllowArbitraryServer_name = __('Allow login to any MySQL server');
